# ChangeLog for app-emacs/mpg123-el
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emacs/mpg123-el/ChangeLog,v 1.20 2009/06/03 17:08:58 fauli Exp $

  03 Jun 2009; Christian Faulhammer <fauli@gentoo.org>
  -mpg123-el-1.50.ebuild:
  clean up

  22 Apr 2009; Markus Meier <maekke@gentoo.org> mpg123-el-1.51-r1:
  amd64 stable, bug #265311

  14 Apr 2009; Raúl Porcel <armin76@gentoo.org> mpg123-el-1.51-r1.ebuild:
  x86 stable wrt #265311

*mpg123-el-1.51-r1 (06 Mar 2009)

  06 Mar 2009; Christian Faulhammer <fauli@gentoo.org>
  -mpg123-el-1.51.ebuild, +mpg123-el-1.51-r1.ebuild:
  revision bump with correct tarball

*mpg123-el-1.51 (29 Jan 2009)

  29 Jan 2009; Christian Faulhammer <fauli@gentoo.org>
  +mpg123-el-1.51.ebuild:
  version bump

  29 Jan 2009; Christian Faulhammer <fauli@gentoo.org>
  -mpg123-el-1.47.ebuild:
  clean up

  14 Jan 2008; Christoph Mende <angelos@gentoo.org> mpg123-el-1.50.ebuild:
  Stable on amd64 wrt bug #204003

  02 Jan 2008; Christian Faulhammer <opfer@gentoo.org>
  mpg123-el-1.50.ebuild:
  stable x86, bug 204003

*mpg123-el-1.50 (02 Dec 2007)

  02 Dec 2007; Christian Faulhammer <opfer@gentoo.org>
  +mpg123-el-1.50.ebuild:
  version bump

  07 Oct 2007; Ulrich Mueller <ulm@gentoo.org> -mpg123-el-1.42.ebuild,
  mpg123-el-1.47.ebuild:
  Remove quotes around tc-getCC command substitution. Remove old.

  30 Mar 2007; Christian Faulhammer <opfer@gentoo.org>
  mpg123-el-1.47.ebuild:
  stable x86

*mpg123-el-1.47 (09 Feb 2007)

  09 Feb 2007; Christian Faulhammer <opfer@gentoo.org>
  +mpg123-el-1.47.ebuild:
  version bump: removed virtual/emacs from DEPEND, added a quote around a
  variable

  06 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
  Regenerate digest in Manifest2 format.

  26 Dec 2005; Luca Barbato <lu_zero@gentoo.org> mpg123-el-1.42.ebuild:
  oggvorbis Cleanup

  29 Sep 2005; Joseph Jezak <josejx@gentoo.org> mpg123-el-1.42.ebuild:
  Marked ~ppc.
