@@ -1,5 +1,17 @@
-AUX 50mpg123-el-gentoo.el 161 RMD160 d54b098dfe0739082da8c5e9d3ba7bf6469e31a3 SHA1 8d6bf2bfd2f31caff07a297d4a899bca6cea1fba SHA256 622d31084c18312975328419794e98ad1adadad13af2ccf7ed62eb93804f8186
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
+AUX 50mpg123-el-gentoo.el 121 RMD160 db606794abceeca877e68e68e545714f40494cc0 SHA1 b6de9040fad24de05c34e75fefb673b69ee5a559 SHA256 f98c0b7674758684be83e3311060a51ddaacd9576ffe88d87083c0406bc93839
 DIST mpg123-el-1.51-r1.tar.bz2 34275 RMD160 afca2f7038a78c823aeb617a87c999cc9caa2bef SHA1 9c30492272c9ab8dd0df1ca339302a8c76f45102 SHA256 de4cdd963fa54ffceee3355123171a421df26012ce27041cfe9a311ad66e428c
+DIST mpg123-el-1.52.tar.bz2 33625 RMD160 d6335d9925b7bc38ae8fb8b94b3d7b6fa4aed7af SHA1 8dd186582ce48b4951464e7cb072e4c77393310a SHA256 f4c9e5c682b8abc1f39dae35f2b15b6de51238094efa618aaf9f3a84f672df44
 EBUILD mpg123-el-1.51-r1.ebuild 993 RMD160 3f62a1f4dc0336f045fb8ef70146dc033f8a48f5 SHA1 6e056e639646d271a204bf7572bc589ef3d6bfd1 SHA256 b8e762b65ecc16423a4ef6d910e376a8265f3c36385a681bb0d971f540817964
-MISC ChangeLog 2437 RMD160 837f176b9b91e56a83f69959ec619c7a183d5b21 SHA1 b616ca26c849aeaec928a0848e4d0b0715593109 SHA256 c2f7bf5b31646c24cf6c3b0fd749d618a2ff2f5334c0f75482bdba2f1cb1ad37
+EBUILD mpg123-el-1.52.ebuild 967 RMD160 87932346cdf6c7911f620cb9f40ab56886e59bf5 SHA1 9cd370a5d3f3c2748038bf399a03fe33ca487f17 SHA256 50b976bde45830767a7eeae4484239272dc6bc24fb3af9fc5416e354cb7a0933
+MISC ChangeLog 2554 RMD160 ad6c6d0cb9fa5ddbbf7576bad87cd384e6f64ec4 SHA1 1d5df6778d5c2db20b3f8f105d47a51caf0a7ec3 SHA256 89fabb84c23dc26af73a6b17823bcee8c3bd9dd27213e272b853ea6972a98498
 MISC metadata.xml 158 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 SHA1 61f6eff9729cd87a725c2a70c81aca4270a17fc4 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v1.4.10 (GNU/Linux)
+
+iEYEARECAAYFAkrY6G4ACgkQOeoy/oIi7uzwvgCfUt0znkce5Z0T/+rqjoTumjMz
+vEUAn3JLvofBftF7TS+vOuyUmdx5ZUqs
+=SkY1
+-----END PGP SIGNATURE-----
